--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>This is my portfolio. Hope you will like it.
             <br>Never mind. I just want to show Tarif and Munna that I also can.
             </p>
-            <button><a href="https://www.facebook.com/anas.sarker.71">Hire Me</button></a>
+            <button><a href="https://www.facebook.com/anas.sarker.71" target="_blank">Hire Me</button></a>
             </div>
             <!-- image -->
             <div class="profile-image">
@@ -37,7 +37,7 @@
                     <h1>Dreams...</h1>
                     <p>I am a begineer and i want to learn many things.</p>
                     <p>Dreams are still loading.</p>
-                    <button><a href="https://www.linkedin.com/in/md-anas-sarkar-19171828b/">Visit my linkdin profile</a></button>
+                    <button><a href="https://www.linkedin.com/in/md-anas-sarkar-19171828b/" target="_blank">Visit my linkdin profile</a></button>
             </div>
         </div>
             <section class="experience-section">
